@@ -1,5 +1,11 @@
 package com.kargobaji.kargobaji.like;
 
+import com.kargobaji.kargobaji.openAPI.dto.RestAreaDetailDto;
+import com.kargobaji.kargobaji.openAPI.entity.RestAreaBrand;
+import com.kargobaji.kargobaji.openAPI.entity.RestAreaFacility;
+import com.kargobaji.kargobaji.openAPI.repository.RestAreaBrandRepository;
+import com.kargobaji.kargobaji.openAPI.repository.RestAreaFacilityRepository;
+import com.kargobaji.kargobaji.openAPI.repository.RestAreaFoodRepository;
 import com.kargobaji.kargobaji.loginSignup.domain.User;
 import com.kargobaji.kargobaji.like.dto.LikeResponse;
 import com.kargobaji.kargobaji.like.entity.Like;
@@ -8,11 +14,12 @@ import com.kargobaji.kargobaji.loginSignup.repository.UserRepository;
 import com.kargobaji.kargobaji.openAPI.entity.RestArea;
 import com.kargobaji.kargobaji.openAPI.repository.RestAreaRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +27,10 @@ public class LikeService {
     private final LikeRepository likeRepository;
     private final UserRepository userRepository;
     private final RestAreaRepository restAreaRepository;
+
+    private final RestAreaBrandRepository restAreaBrandRepository;
+    private final RestAreaFoodRepository restAreaFoodRepository;
+    private final RestAreaFacilityRepository restAreaFacilityRepository;
 
     // 좋아요 생성 / 삭제
     @Transactional
@@ -52,7 +63,6 @@ public class LikeService {
         return LikeResponse.fromEntity(savedLike, "좋아요 성공");
     }
 
-    @Transactional
     public Long countLikeRestArea(Long restAreaId){
         RestArea restArea = restAreaRepository.findById(restAreaId)
                 .orElseThrow(() -> new IllegalArgumentException("휴게소가 존재하지 않습니다."));
@@ -60,15 +70,52 @@ public class LikeService {
         return likeRepository.countByRestAreaId(restAreaId);
     }
 
+
     @Transactional
-    public List<String> getLikeUser(Long userId){
+    public List<RestAreaDetailDto> getLikeUser(Long userId){
+        // 유저 유효성 검사
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new IllegalArgumentException("유저가 존재하지 않습니다."));
 
+        // 즐겨찾기 목록 조회
         List<Like> likes = likeRepository.findByUserId(userId);
 
-        return likes.stream()
-                .map(favorite -> favorite.getRestArea().getStdRestNm())
-                .collect(Collectors.toList());
+        if(likes.isEmpty()){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "즐겨찾기한 휴게소가 존재하지 않습니다.");
+        }
+
+        // 즐겨찾기된 휴게소들 가져오기
+        List<RestArea> restAreas = likes.stream()
+                .map(Like::getRestArea)
+                .toList();
+
+        // 각 휴게소에 대한 상세 정보 생성
+        return restAreas.stream().map(restArea -> {
+            List<String> brands = restAreaBrandRepository.findByStdRestNm(restArea.getStdRestNm())
+                    .stream().map(RestAreaBrand::getBrdName).toList();
+
+            List<String> facilities = restAreaFacilityRepository.findByStdRestNm(restArea.getStdRestNm())
+                    .stream().map(RestAreaFacility::getPsName).toList();
+
+            List<RestAreaDetailDto.FoodDto> foods = restAreaFoodRepository.findByStdRestNm(restArea.getStdRestNm())
+                    .stream().map(f -> new RestAreaDetailDto.FoodDto(f.getFoodNm(), f.getFoodCost()))
+                    .toList();
+
+            return RestAreaDetailDto.builder()
+                    .id(restArea.getId())
+                    .stdRestNm(restArea.getStdRestNm())
+                    .gasolinePrice(restArea.getGasolinePrice())
+                    .diselPrice(restArea.getDiselPrice())
+                    .lpgPrice(restArea.getLpgPrice())
+                    .roadAddress(restArea.getRoadAddress())
+                    .phone(restArea.getPhone())
+                    .latitude(restArea.getLatitude())
+                    .longitude(restArea.getLongitude())
+                    .restAreaNm(restArea.getRestAreaNm())
+                    .brands(brands)
+                    .facilities(facilities)
+                    .foods(foods)
+                    .build();
+        }).toList();
     }
 }
